2006-12-15  Nathaniel Smith  <njs@pobox.com>

	* tests/fail_cleanly_when__MTN_format_empty: Rename to...
	* tests/fail_cleanly_when__MTN_format_corrupt: ...this, and
	add a few more test cases.

2006-12-15  Tero Koskinen  <tero.koskinen@iki.fi>

	* work_migration.cc (get_ws_format): Fail cleanly when _MTN/format
	is broken.
	* tests/fail_cleanly_when__MTN_format_empty: Test.

2006-12-14  Thomas Keller  <me@thomaskeller.biz>

	* work.cc: handle missing directories properly in 
        classify_roster_paths
        * automate.cc: trailing slash also for missing directories
        * tests/...: adapted automate_inventory test which now tests
        for unknown, added (but missing) and dropped (uncommitted) dirs

2006-12-14  Thomas Keller  <me@thomaskeller.biz>

	* POTFILES.in: added missing restrictions.cc
	* restrictions.cc: pluralized "%d missing paths"

2006-12-13  Thomas Moschny  <thomas.moschny@gmx.de>

	* options.cc (name): Call localize_monotone() before fetching an
	option's description, to make sure that it is translated properly.

2006-12-13  Markus Schiltknecht  <markus@bluegap.ch>

	Made a lua tester function more bullet proof.

	* tester.lua (samelines): do not throw a format error if
	the file ends before expected.

2006-12-14  Thomas Keller  <me@thomaskeller.biz>

	* NEWS: added note about new automate get_file_of

2006-12-12  Ben Walton  <bdwalton@gmail.com>
 
        * cmd_ws_cc: Added mtn mkdir
        * testsuite.lua: added mtn mkdir test
        * included tests/mkdir as unit testing for mtn mkdir
        * added documentation to monotone.texi

2006-12-12  Thomas Moschny  <thomas.moschny@gmx.de>

	* HACKING: Updated "Patch submission guidelines" section.

2006-12-11  Ben Walton  <bdwalton@gmail.com>
 
        * cmd_ws_commit.cc,
        tests/commit_using__MTN_log/commit_log_modified_return.lua,
        tests/commit_using__MTN_log/__driver__.lua:
        Added the requirement that when _MTN/log is pre-specified by