@@ -1,5 +1,10 @@
 2006-12-15  Nathaniel Smith  <njs@pobox.com>
 
+	* paths.cc: Add a few more normalization tests for things like
+	"foo/.".
+
+2006-12-15  Nathaniel Smith  <njs@pobox.com>
+
 	* tests/fail_cleanly_when__MTN_format_empty: Rename to...
 	* tests/fail_cleanly_when__MTN_format_corrupt: ...this, and
 	add a few more test cases.
